--- a/MongooseBasics/package.json
+++ b/MongooseBasics/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RESTDemo",
+  "name": "mongoosebasics",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,9 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.5",
-    "express": "^4.17.1",
-    "method-override": "^3.0.0",
-    "uuid": "^8.3.2"
+    "mongoose": "^7.6.2"
   }
 }
